========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'v2' branch.
The master branch will rely on the Git repository history.


2020-11-17

 - Made it legal to insert a balance entry after account closure. It is a common
   case that transactions happen on the last day of an account and the balance
   directive operates at the beginning of the day. It was arguable whether
   directives should be allowed after closure; notes and documents were allowed
   because statements and phone calls may still occur after an account is
   closed, but I suppose you can make the argument that a statement balance can
   also occur at a later date, so voila, make it legal. You still cannot post
   transactions to a closed account, which is the thing that really matters.


2020-11-15

 - Render the tolerance in Balance directives (merged from Aaron Lindsay).


2020-11-01

 - In the process of removing dependencies to the beancount.ops.holdings module,
   significantly sped up the net-worth-over-time script by using simple
   aggregation to an inventory (which is how it should be done).
 - Allow balance_by_account() method to compress positions that aren't booked,
   as an option.
 - Added split() method to Inventory, like segregate_units but with no
   constraints.
 - Fixed #255: Added a new beancount.core.prices.project() method to project
   prices to another cost currency.


2020-10-26

 - Fixed Github Actions workflows and Wheel generation.
 - Released 2.3.3 to trigger new binaries.


2020-10-25

 - Removed the part of setup_test checks running the binaries with --help, as
   they fail starting at 3.8. Someone with more time would create a test using
   pytest-virtualenv.


2020-10-17

 - Fixed #566: Duplicate postings on entries should count toward distinct
   hashes.


2020-10-10

 - Moved Emacs support to its own repository
   (http://github.com/beancount/beancount-mode).


2020-09-12
